[package]
name = "cw721-nft"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = "1.4.1"
cosmwasm-std = "1.0.0"
cw721-base = { version = "0.18.0", features = ["library"] }

[dev-dependencies]
cw-ownable = "0.5.1"
cw721 = "0.18.0"
serde_json = "1.0.117"